--- a/result/2022-06-23.md
+++ b/result/2022-06-23.md
@@ -42,3 +42,4 @@
 42. [西安一幼儿园200余名儿童疑食物中毒](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%B8%80%E5%B9%BC%E5%84%BF%E5%9B%AD200%E4%BD%99%E5%90%8D%E5%84%BF%E7%AB%A5%E7%96%91%E9%A3%9F%E7%89%A9%E4%B8%AD%E6%AF%92%23&Refer=top) 153945
 43. [专家称苹果自乔布斯后再无创新](https://s.weibo.com//weibo?q=%23%E4%B8%93%E5%AE%B6%E7%A7%B0%E8%8B%B9%E6%9E%9C%E8%87%AA%E4%B9%94%E5%B8%83%E6%96%AF%E5%90%8E%E5%86%8D%E6%97%A0%E5%88%9B%E6%96%B0%23&Refer=top) 135957
 44. [多地规定房价跌幅不能超15%](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E8%A7%84%E5%AE%9A%E6%88%BF%E4%BB%B7%E8%B7%8C%E5%B9%85%E4%B8%8D%E8%83%BD%E8%B6%8515%25%23&Refer=top) 124995
+45. [高校办昆虫宴送别毕业生](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%A0%A1%E5%8A%9E%E6%98%86%E8%99%AB%E5%AE%B4%E9%80%81%E5%88%AB%E6%AF%95%E4%B8%9A%E7%94%9F%23&Refer=top) 72853
