--- a/result/2022-06-23.md
+++ b/result/2022-06-23.md
@@ -43,3 +43,7 @@
 43. [专家称苹果自乔布斯后再无创新](https://s.weibo.com//weibo?q=%23%E4%B8%93%E5%AE%B6%E7%A7%B0%E8%8B%B9%E6%9E%9C%E8%87%AA%E4%B9%94%E5%B8%83%E6%96%AF%E5%90%8E%E5%86%8D%E6%97%A0%E5%88%9B%E6%96%B0%23&Refer=top) 135957
 44. [多地规定房价跌幅不能超15%](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E8%A7%84%E5%AE%9A%E6%88%BF%E4%BB%B7%E8%B7%8C%E5%B9%85%E4%B8%8D%E8%83%BD%E8%B6%8515%25%23&Refer=top) 124995
 45. [高校办昆虫宴送别毕业生](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%A0%A1%E5%8A%9E%E6%98%86%E8%99%AB%E5%AE%B4%E9%80%81%E5%88%AB%E6%AF%95%E4%B8%9A%E7%94%9F%23&Refer=top) 80794
+46. [上海发布今夏首个高温预警](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E5%8F%91%E5%B8%83%E4%BB%8A%E5%A4%8F%E9%A6%96%E4%B8%AA%E9%AB%98%E6%B8%A9%E9%A2%84%E8%AD%A6%23&Refer=top) 12488
+47. [多名CBA球员加盟湾区翼龙](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%90%8DCBA%E7%90%83%E5%91%98%E5%8A%A0%E7%9B%9F%E6%B9%BE%E5%8C%BA%E7%BF%BC%E9%BE%99%23&Refer=top) 7790
+48. [金锣玉米肠被曝吃出黑色硬物](https://s.weibo.com//weibo?q=%23%E9%87%91%E9%94%A3%E7%8E%89%E7%B1%B3%E8%82%A0%E8%A2%AB%E6%9B%9D%E5%90%83%E5%87%BA%E9%BB%91%E8%89%B2%E7%A1%AC%E7%89%A9%23&Refer=top) 7623
+49. [2022金砖会晤](https://s.weibo.com//weibo?q=%232022%E9%87%91%E7%A0%96%E4%BC%9A%E6%99%A4%23&Refer=top) 7448
